--- a/BertScout2025/ListPage.xaml
+++ b/BertScout2025/ListPage.xaml
@@ -19,6 +19,7 @@
                 HorizontalOptions="Center"
                 WidthRequest="150"
                 Margin="0,10,0,0"
+                BackgroundColor="CornflowerBlue"
             />
         </ListView.Header>
         <ListView.ItemTemplate>
